--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -7,5 +7,8 @@
     "txt_archived": "Archived",
     "txt_pinned": "Pinned",
     "txt_all_chats": "All Chats"
+  },
+  "conversation": {
+    "txt_write_a_message": "Write a message ..."
   }
 }
